# dynagox

./: .gitignore  Queries.md  Readme.md  common.sh  verify.sh
dynagox_cpp/implement/: CMakeLists.txt  CROWN_ALGORITHM_TRACE.md  CROWN_EXPLANATION.md  RUN_TEST_INSTRUCTIONS.md  build_and_run.ps1  run_linek_bench_grid.ps1  test_simple.txt
dynagox_cpp/implement/benchmark/: WORKFLOW.md  compare_linek_systems.py  dynagox_wiki_vote_quick.csv  flink_results.csv  prepare_snap_stream.py  run_dynagox_linek_set_updates.py  run_flink_linek_baseline.py  run_flink_linek_set_updates.py  run_linek_set_oracle.py  validate_linek_delta_raw_oracle.py  wiki_vote.stream.flink.csv
dynagox_cpp/implement/benchmark/aligned_full/: dynagox_aligned.csv  flink_aligned.csv  flink_k2.csv  flink_k3.csv  flink_k4.csv  flink_k5.csv  flink_k6.csv  wiki_vote_k2.stream.crown  wiki_vote_k2.stream.flink.csv  wiki_vote_k3.stream.crown  wiki_vote_k3.stream.flink.csv  wiki_vote_k4.stream.crown  wiki_vote_k4.stream.flink.csv  wiki_vote_k5.stream.crown  wiki_vote_k5.stream.flink.csv  wiki_vote_k6.stream.crown
dynagox_cpp/implement/benchmark/flink/: README.md  linek_count_template.sql
dynagox_cpp/implement/benchmark/report_wiki_vote_quick/: correctness_report.csv  summary.txt
dynagox_cpp/implement/benchmark/set_semantics_full/: EMAIL_REPLY_DRAFT_TO_PROF_QICHEN.txt  REPORT_FOR_PROF_QICHEN.md  dynagox.csv  flink.csv  flink_k2.csv  flink_k2_strict.csv  flink_k2_strict_fixcheck.csv  flink_k3.csv  flink_k4.csv  flink_k5.csv  flink_k6.csv  oracle.csv  oracle_k2.csv  oracle_k3.csv  oracle_k4.csv  oracle_k5.csv  oracle_k6.csv  wiki_vote_k3.stream.crown  wiki_vote_k5.stream.flink.csv  wiki_vote_k6.stream.flink.csv
dynagox_cpp/implement/benchmark/set_semantics_strict_full11/: EMAIL_REPLY_DRAFT_TO_PROF_QICHEN.txt  REPORT_STRICT_FULL11_FOR_PAPER.md  dynagox.csv  flink.csv  flink_k2.csv  flink_k3.csv  flink_k4.csv  flink_k5.csv  flink_k6.csv  oracle.csv  oracle_k2.csv  oracle_k3.csv  oracle_k4.csv  oracle_k5.csv  oracle_k6.csv  wiki_vote_k2.stream.crown  wiki_vote_k2.stream.flink.csv  wiki_vote_k3.stream.flink.csv  wiki_vote_k4.stream.crown  wiki_vote_k4.stream.flink.csv  wiki_vote_k5.stream.crown  wiki_vote_k6.stream.crown
dynagox_cpp/implement/benchmark/set_semantics_strict_reduced/: EMAIL_REPLY_DRAFT_TO_PROF_QICHEN.txt  dynagox.csv  flink.csv  flink_k2.csv  flink_k3.csv  flink_k4.csv  flink_k5.csv  flink_k6.csv  wiki_vote_k2.stream.crown  wiki_vote_k2.stream.flink.csv  wiki_vote_k3.stream.crown  wiki_vote_k3.stream.flink.csv  wiki_vote_k4.stream.crown  wiki_vote_k4.stream.flink.csv  wiki_vote_k5.stream.crown  wiki_vote_k5.stream.flink.csv  wiki_vote_k6.stream.crown  wiki_vote_k6.stream.flink.csv
dynagox_cpp/implement/benchmark/strict_timing_smoke/: flink_k2_strict.csv  wiki_vote_k2_small.stream.crown  wiki_vote_k2_small.stream.flink.csv
dynagox_cpp/implement/build-linux/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  build.ninja  cmake_install.cmake
dynagox_cpp/implement/build-linux/convert/: CTestTestfile.cmake  cmake_install.cmake
dynagox_cpp/implement/build-linux/experiments/: CTestTestfile.cmake  bench_linek_count  bench_linek_count_stream  cmake_install.cmake  dump_linek_checkpoint
dynagox_cpp/implement/build-linux/multi_hash_map/: CTestTestfile.cmake  cmake_install.cmake
dynagox_cpp/implement/build-linux/tests/: CTestTestfile.cmake  cmake_install.cmake  tests  tests-b12d07c_include.cmake  tests-b12d07c_tests.cmake
dynagox_cpp/implement/build-linux/utils/: CTestTestfile.cmake  cmake_install.cmake
dynagox_cpp/implement/cmake/: Catch2.cmake  ClangFormat.cmake  fmt.cmake
dynagox_cpp/implement/convert/: CMakeLists.txt
dynagox_cpp/implement/convert/src/: convert_ceb.cpp  convert_graph.cpp  convert_job.cpp  convert_lsqb.cpp  convert_tpcds.cpp  convert_tpch.cpp
dynagox_cpp/implement/experiments/: CMakeLists.txt
dynagox_cpp/implement/experiments/include/: tpcds15_tuples.h  tpcds19_tuples.h  tpch10_tuples.h  tpch3_tuples.h  tpch5_tuples.h  tpch8_tuples.h  tpch9_tuples.h  tuples.h
dynagox_cpp/implement/multi_hash_map/: CMakeLists.txt
dynagox_cpp/implement/multi_hash_map/include/: memory_pool.h  multi_hash_map.h  primary_hash_index.h  secondary_hash_index.h  singleton.h
dynagox_cpp/implement/tests/: CMakeLists.txt
dynagox_cpp/implement/tests/crown/: linek_count_fuzz_test.cpp
dynagox_cpp/implement/tests/multi_hash_map/: memory_pool_test.cpp  multi_hash_map_test.cpp  singleton_test.cpp  (+2 more)
dynagox_cpp/implement/utils/: CMakeLists.txt
(+626 files in other folders)
